Fix spacing of headings

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ div {
 }
 #title {
   color: #FFF;
-  font-family: Arial Black; Black; Black; Black;
+  font-weight: 900;
   margin: 0px 20px 0px 20px;
   vertical-align: middle;
 }
@@ -67,10 +67,12 @@ div {
   float: left;
   margin: 5px;
   border: solid 2px #999;
+  height: 95%;
 }
 .category {
   border-bottom: solid 2px #ccc;
   padding: 0px 5px 0px 5px;
+  margin-bottom: 3px;
 
 }
 .category:hover {
